[gd_scene load_steps=6 format=3 uid="uid://b8ag51x5pug0g"]

[ext_resource type="Script" uid="uid://blvj6kpujm30v" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="Texture2D" uid="uid://dltijc8rdea0i" path="res://assets/images/courtroom.png" id="1_o5qli"]
[ext_resource type="AudioStream" uid="uid://daj65ug2m6fri" path="res://assets/sounds/sfx-dink.wav" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cxn8fxpjq6utx" path="res://scenes/character_sprite.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dbcklmqo03grh" path="res://scenes/dialog_ui.tscn" id="4_jyhfs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")

[node name="NextSentenceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_tbgi4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_o5qli")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharacterSprite" parent="CanvasLayer2/Control" instance=ExtResource("3_sugp2")]
unique_name_in_owner = true
position = Vector2(0, -261.98)
scale = Vector2(0.7, 0.7)

[node name="DialogUI" parent="CanvasLayer2" instance=ExtResource("4_jyhfs")]
unique_name_in_owner = true
